# Hivemind

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/actors/: funcs.rs  macros.rs  mod.rs
src/context/: mod.rs
src/contexts/: mod.rs  script.rs  task.rs
src/funcs/: mod.rs
src/global_store/: mod.rs
src/partitioner/: hash.rs  mod.rs
src/rdd/: dependency.rs  funcs.rs  functions.rs  macros.rs  mod.rs  mod_conflict-20170924-003844.rs  script.rs
src/rdd/transformations/: filter.rs  flat_map.rs  map.rs  map_partitations.rs  map_partitions.rs  mod.rs
src/rdd/transformers/: filter.rs  map.rs  map_partitions.rs  mod.rs
src/resource/: block_storage.rs  global_storage.rs  immutable_storage.rs  mod.rs  streamable_storage.rs
src/schduler/: mod.rs
src/scheduler/: mod.rs
src/scheduler/dag/: mod.rs
src/scheduler/dag/partitioner/: cons_hash.rs  hash.rs  mod.rs  range.rs
src/scheduler/stages/: mod.rs
src/server/: members.rs  mod.rs
src/server/resources/: manager.rs
src/storage/: mod.rs
src/storage/block/: client.rs  mod.rs  registry.rs  server.rs  server_conflict-20180407-033803.rs  server_conflict-20180407-034022.rs  server_conflict-20180407-034941.rs
src/storage/global/: mod.rs  state_machine.rs
src/storage/immutable/: mod.rs  read_damper.rs  state_machine.rs
src/utils/: mod.rs  stream.rs  uuid.rs
tests/: closure_serialize.rs  server.rs  tests.rs
tests/storage/: block.rs  global.rs
