[package]
name = "hivemind"
version = "0.1.0"
authors = ["Jack Shi <shisoftgenius@gmail.com>"]

[dependencies]
libloading = "0.4"
serde = "*"
serde_derive = "*"
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
lazy_static = "*"
[lib]
name = "hivemind"

[[test]]
name = "tests"