[package]
name = "hivemind"
version = "0.1.0"
authors = ["Jack Shi <shisoftgenius@gmail.com>"]

[dependencies]
libloading = "0.4"
serde = "*"
serde_derive = "*"
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
lazy_static = "*"
uuid = { version = "0.5", features = ["v4"] }
parking_lot = "0.4"
typedef = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"

[lib]
name = "hivemind"

[[test]]
name = "tests"

[features]
nightly = ["typedef/nightly"]